Fixed: text aligned.

--- a/star/src/styles/LogIn.css
+++ b/star/src/styles/LogIn.css
@@ -34,11 +34,20 @@ span{
 }
 
 .uploader{
-  margin-top: 10%;
+  margin-top: 5%;
 }
 
 p{
   color : #000000;
   font-size: 15px;
   text-align: center;
+  margin-bottom: 0px;
+}
+
+.text{
+  padding-top: 50px ;
+}
+
+.up{
+  padding-top: 7px;
 }
